# corogue

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  gba.json
src/: lang.rs  main.rs  rand.rs
